# python-todo-app

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.in  requirements.txt
app/: config.py  crud.py  database.py  dependencies.py  main.py  security.py  settings.py
app/crud/: tasks.py  todos.py  users.py
app/models/: task.py  todo.py  user.py
app/routers/: auth.py  tasks.py  todos.py  users.py
app/schemas/: __init__.py  task.py  todo.py  token.py  user.py
docs/: models.puml
migrations/: env.py
migrations/versions/: ceb9fc4f940e_initial_revision.py
