[tool.poetry]
classifiers = ["Private :: Do not Upload"]
name = "python-todo-app"
version = "0.1.0"
description = ""
authors = ["Arkadiusz Krauzowicz <arkadiusz.krauzowicz@cube11.pl>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
SQLAlchemy = "^1.4.34"
python-multipart = "^0.0.5"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
python-dotenv = "^0.20.0"
alembic = "^1.7.7"

[tool.poetry.dev-dependencies]
mypy = "^0.942"
pytest = "^7.1.1"
isort = "^5.10.1"
black = "^22.3.0"
pylint = "^2.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
